--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-<h1>Metatron</h1>
+<h1><a href="https://edenprotocol.io/">EDEN</a> Metatron</h1>
 
 {{ version }}
 
